force-app/main/default/objects/bpats__Job_Board_Application__c/bpats__Job_Board_Application__c.object-meta.xml
<CustomObject>
    <label>Job Board Application</label>
    <nameField>
        <displayFormat>JBA-{0000}</displayFormat>
        <label>Job Board Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Board Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>