force-app/main/default/objects/bpats__Job_Board_Application__c/fields/bpats__Contact__c.field-meta.xml
<CustomField>
    <fullName>bpats__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Board Applications</relationshipLabel>
    <relationshipName>Job_Board_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>