force-app/main/default/objects/bpats__Job_Board_Application__c/fields/bpats__Email__c.field-meta.xml
<CustomField>
    <fullName>bpats__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>