force-app/main/default/objects/bpats__Job_Board_Application__c/fields/bpats__Job__c.field-meta.xml
<CustomField>
    <fullName>bpats__Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>bpats__Job__c</referenceTo>
    <relationshipLabel>Job Board Applications</relationshipLabel>
    <relationshipName>Job_Board_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>