force-app/main/default/objects/bpats__Job_Board_Application__c/fields/bpats__Job_Board__c.field-meta.xml
<CustomField>
    <fullName>bpats__Job_Board__c</fullName>
    <label>Job Board</label>
    <length>255</length>
    <type>Text</type>
</CustomField>