force-app/main/default/objects/bpats__Job_Board_Application__c/fields/bpats__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>