force-app/main/default/objects/bpats__Job_Board_Application__c/fields/bpats__Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>bpats__Mobile_Phone__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>