force-app/main/default/objects/bpats__Job_Board_Application__c/fields/bpats__Status__c.field-meta.xml
<CustomField>
    <fullName>bpats__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Duplicates Found</fullName>
            </value>
            <value>
                <fullName>Contact Identified</fullName>
            </value>
            <value>
                <fullName>Added to Job</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Discarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>