force-app/main/default/objects/bpats__Job_Board_Application__c/listViews/bpats__All.listView-meta.xml
<ListView>
    <fullName>bpats__All</fullName>
    <columns>NAME</columns>
    <columns>bpats__First_Name__c</columns>
    <columns>bpats__Last_Name__c</columns>
    <columns>bpats__Email__c</columns>
    <columns>bpats__Job__c</columns>
    <columns>bpats__Status__c</columns>
    <columns>bpats__Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>